Add zoom-range controls.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
       <div class="controls">
         <button id="create">+ Create polygon</button>
         <button id="clear" disabled>Clear</button>
+        <label>Zoom-range to mark:
+          <select id="minz">
+            <option value="7" selected>7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12">12</option>
+          </select>
+          <select id="maxz">
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12" selected>12</option>
+          </select>
+        </label>
         <button id="markdirty" disabled>Mark Dirty</button>
       </div>
     </header>
