--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Using OpenLayers with Parcel</title>
+    <title>OSM-dirty</title>
     <style>
       @import "node_modules/ol/ol.css";
     </style>
