--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <button id="clear" disabled>Clear</button>
         <label>Zoom-range to mark:
           <select id="minz">
-            <option value="7" selected>7</option>
+            <option value="6" selected>6</option>
+            <option value="7">7</option>
             <option value="8">8</option>
             <option value="9">9</option>
             <option value="10">10</option>
@@ -54,6 +55,7 @@
             <option value="12">12</option>
           </select>
           <select id="maxz">
+            <option value="6">6</option>
             <option value="7">7</option>
             <option value="8">8</option>
             <option value="9">9</option>
