--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <header id="header">
-      <h1>OSM-dirty</h1>
+      <h1><a href="https://github.com/adamfranco/osmdirty">OSM-dirty</a></h1>
       <div class="controls">
         <button id="create">+ Create polygon</button>
         <button id="clear" disabled>Clear</button>
