Set the default Referrer-Policy so that the application path is included

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="referrer" content="no-referrer-when-downgrade">
     <title>OSM-dirty</title>
     <style>
       @import "node_modules/ol/ol.css";
